@@ -1,9 +1,9 @@
 AC_PREREQ(2.59)
-AC_INIT
+AC_INIT([libeio], 1.0)
 AC_CONFIG_SRCDIR([eio.h])
 AC_CONFIG_HEADERS([config.h])
+AM_INIT_AUTOMAKE
 
-AM_INIT_AUTOMAKE(libeio,1.0)
 AM_MAINTAINER_MODE
 
 AC_GNU_SOURCE
